# MCHPRS

./: .gitignore  CMakeLists.txt  LICENSE
source/: main.cpp  player.h  server.h  util.h
source/network/: network.cpp  network.h  socket.cpp  socket.h
source/network/packets/: serverbound.h
source/util/: mpsc.h  types.h
